Cleaned up the folder structure